tercera entrega, falta corregir

--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
             
                 <div>
                     <label for="">Producto</label>
-                    <input type="text" id="newAlmacenName">
+                    <input type="text" id="nameProduct">
                     <label for="">Marca</label>
-                    <input type="text" id="newAlmacenBrand">
+                    <input type="text" id="brandProduct">
                     <label for="">Precio</label>
-                    <input type="text" id="newAlmacenPrice">
+                    <input type="text" id="priceProduct">
                     <label for="">Promocion</label>
-                    <input type="text" id="newAmacenPromotion">
+                    <input type="text" id="promotionProduct">
+                    <button id="newProd">Agregar producto</button>
                 </div>
 
 
