re entrega de la 3era entrega

--- a/index.html
+++ b/index.html
@@ -14,50 +14,116 @@
         <h3>Categorías</h3>
         <div>
             <fieldset>
-                <h4 id="marketID">Almacen</h4>
-                <ul id="marketList">
-                </ul>
-                <button id="btnNewMarket">Agregar producto</button>
+                <div id="market"> <!--padre button - boxNod -->
+                    <h4>Almacen</h4>
+                    <div class="aux"></div>
+                    <table>
+                        <thead class="header">
+                        </thead>
+                        <tbody class="listProd">
+                        </tbody>
+                    </table>
+                    <div class="inputs">
+                        <label for="">Producto</label>
+                        <input type="text" class="nameProduct">
+                        <label for="">Marca</label>
+                        <input type="text" class="brandProduct">
+                        <label for="">Precio por unidad</label>
+                        <input type="number" class="priceProduct">
+                        <label for="">Promocion</label>
+                        <input type="number " class="promotionProduct">
+                    </div>
+                    <button class="btnNewProd">Agregar producto</button>
+                    <fieldset>
+                        <p>Tipos de promociones: 0 = 2x1 , 1 = 3x2 , 2 = 50% OFF en la 2da unidad</p>
+                    </fieldset>
+                </div><!--fin padre button - boxNod -->
             </fieldset>
         </div>
         <div>
             <fieldset>
-                <h4 id="drinksID">Bebidas</h4>
-                <ul id="drinksList">
-                </ul>
-                <button id="btnNewDrink">Agregar producto</button>
+                <div id="drinks"> <!--padre button - boxNod -->
+                    <h4>Bebidas</h4>
+                    <div class="aux"></div>
+                    <table>
+                        <thead class="header">
+                        </thead>
+                        <tbody class="listProd">
+                        </tbody>
+                    </table>
+                    <div class="inputs">
+                        <label for="">Producto</label>
+                        <input type="text" class="nameProduct">
+                        <label for="">Marca</label>
+                        <input type="text" class="brandProduct">
+                        <label for="">Precio por unidad</label>
+                        <input type="number" class="priceProduct">
+                        <label for="">Promocion</label>
+                        <input type="number " class="promotionProduct">
+                    </div>
+                    <button class="btnNewProd">Agregar producto</button>
+                    <fieldset>
+                        <p>Tipos de promociones: 0 = 2x1 , 1 = 3x2 , 2 = 50% OFF en la 2da unidad</p>
+                    </fieldset>
+                </div><!--fin padre button - boxNod -->
             </fieldset>
         </div>
         <div>
             <fieldset>
-                <h4 id="cleaningID">Limpieza</h4>
-                <ul id="cleaningList">
-                </ul>
-                <button id="btnNewCleaning">Agregar producto</button>
+                <div id="cleaning"> <!--padre button - boxNod -->
+                    <h4>Limpieza</h4>
+                    <div class="aux"></div>
+                    <table>
+                        <thead class="header">
+                        </thead>
+                        <tbody class="listProd">
+                        </tbody>
+                    </table>
+                    <div class="inputs">
+                        <label for="">Producto</label>
+                        <input type="text" class="nameProduct">
+                        <label for="">Marca</label>
+                        <input type="text" class="brandProduct">
+                        <label for="">Precio por unidad</label>
+                        <input type="number" class="priceProduct">
+                        <label for="">Promocion</label>
+                        <input type="number " class="promotionProduct">
+                    </div>
+                    <button class="btnNewProd">Agregar producto</button>
+                    <fieldset>
+                        <p>Tipos de promociones: 0 = 2x1 , 1 = 3x2 , 2 = 50% OFF en la 2da unidad</p>
+                    </fieldset>
+                </div><!--fin padre button - boxNod -->
             </fieldset>
         </div>
         <div>
             <fieldset>
-                <h4 id="personalCareID">Cuidado personal</h4>
-                <ul id="personalCareList">
-                </ul>
-                <button id="btnNewPersonal">Agregar producto</button>
+                <div id="personalCare"> <!--padre button - boxNod -->
+                    <h4>CuidadoPersonal</h4>
+                    <div class="aux"></div>
+                    <table>
+                        <thead class="header">
+                        </thead>
+                        <tbody class="listProd">
+                        </tbody>
+                    </table>
+                    <div class="inputs">
+                        <label for="">Producto</label>
+                        <input type="text" class="nameProduct">
+                        <label for="">Marca</label>
+                        <input type="text" class="brandProduct">
+                        <label for="">Precio por unidad</label>
+                        <input type="number" class="priceProduct">
+                        <label for="">Promocion</label>
+                        <input type="number " class="promotionProduct">
+                    </div>
+                    <button class="btnNewProd">Agregar producto</button>
+                    <fieldset>
+                        <p>Tipos de promociones: 0 = 2x1 , 1 = 3x2 , 2 = 50% OFF en la 2da unidad</p>
+                    </fieldset>
+                </div><!--fin padre button - boxNod -->
             </fieldset>
-        </div>
-            
-                <div>
-                    <label for="">Producto</label>
-                    <input type="text" id="nameProduct">
-                    <label for="">Marca</label>
-                    <input type="text" id="brandProduct">
-                    <label for="">Precio</label>
-                    <input type="text" id="priceProduct">
-                    <label for="">Promocion</label>
-                    <input type="text" id="promotionProduct">
-                    <button id="newProd">Agregar producto</button>
-                </div>
-
-
+        </div>  
     </div>
 
     <script src="script.js"></script>
