--- a/pages/newProduct.html
+++ b/pages/newProduct.html
@@ -9,14 +9,14 @@
 <body>
     <div>
         <label for="">Producto</label>
-        <input type="text" id="nameProduct">
+        <input type="text" class="nameProduct">
         <label for="">Marca</label>
-        <input type="text" id="brandProduct">
+        <input type="text" class="brandProduct">
         <label for="">Precio</label>
-        <input type="text" id="priceProduct">
+        <input type="text" class="priceProduct">
         <label for="">Promocion</label>
-        <input type="text" id="promotionProduct">
-        <button id="newProd">Agregar producto</button>
+        <input type="text" class="promotionProduct">
+        <button><a href="../index.html">Agregar producto</a></button>
     </div>
     <script src="script.js"></script>
 </body>
