re entrega pre entrega 3 con css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Changuito</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>¡Conoce Changuito!</h1>
@@ -35,7 +36,7 @@
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
                     <fieldset>
-                        <p>Tipos de promociones: 0 = 2x1 , 1 = 3x2 , 2 = 50% OFF en la 2da unidad</p>
+                        <p>Tipos de promociones: 1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
                     </fieldset>
                 </div><!--fin padre button - boxNod -->
             </fieldset>
@@ -63,7 +64,7 @@
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
                     <fieldset>
-                        <p>Tipos de promociones: 0 = 2x1 , 1 = 3x2 , 2 = 50% OFF en la 2da unidad</p>
+                        <p>Tipos de promociones: 1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
                     </fieldset>
                 </div><!--fin padre button - boxNod -->
             </fieldset>
@@ -91,7 +92,7 @@
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
                     <fieldset>
-                        <p>Tipos de promociones: 0 = 2x1 , 1 = 3x2 , 2 = 50% OFF en la 2da unidad</p>
+                        <p>Tipos de promociones: 1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
                     </fieldset>
                 </div><!--fin padre button - boxNod -->
             </fieldset>
@@ -119,7 +120,7 @@
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
                     <fieldset>
-                        <p>Tipos de promociones: 0 = 2x1 , 1 = 3x2 , 2 = 50% OFF en la 2da unidad</p>
+                        <p>Tipos de promociones: 1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
                     </fieldset>
                 </div><!--fin padre button - boxNod -->
             </fieldset>
