Re entrega pre entrega 3 con css nuevo

--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
                         <input type="number" class="promotionProduct">
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
-                    <fieldset>
-                        <p>Tipos de promociones: 1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
-                    </fieldset>
+                    <div class="promDiv">
+                        <fieldset class="promBox">
+                            <p>Tipos de promociones</p>
+                            <p>1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
+                        </fieldset>
+                    </div>
                 </div><!--fin padre button - boxNod -->
             </fieldset>
         </div>
@@ -60,12 +63,15 @@
                         <label for="">Precio por unidad</label>
                         <input type="number" class="priceProduct">
                         <label for="">Promocion</label>
-                        <input type="number " class="promotionProduct">
+                        <input type="number" class="promotionProduct">
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
-                    <fieldset>
-                        <p>Tipos de promociones: 1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
-                    </fieldset>
+                    <div class="promDiv">
+                        <fieldset class="promBox">
+                            <p>Tipos de promociones</p>
+                            <p>1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
+                        </fieldset>
+                    </div>
                 </div><!--fin padre button - boxNod -->
             </fieldset>
         </div>
@@ -88,19 +94,22 @@
                         <label for="">Precio por unidad</label>
                         <input type="number" class="priceProduct">
                         <label for="">Promocion</label>
-                        <input type="number " class="promotionProduct">
+                        <input type="number" class="promotionProduct">
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
-                    <fieldset>
-                        <p>Tipos de promociones: 1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
-                    </fieldset>
+                    <div class="promDiv">
+                        <fieldset class="promBox">
+                            <p>Tipos de promociones</p>
+                            <p>1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
+                        </fieldset>
+                    </div>
                 </div><!--fin padre button - boxNod -->
             </fieldset>
         </div>
         <div>
             <fieldset>
                 <div id="personalCare"> <!--padre button - boxNod -->
-                    <h4>CuidadoPersonal</h4>
+                    <h4>Cuidado Personal</h4>
                     <div class="aux"></div>
                     <table>
                         <thead class="header">
@@ -111,17 +120,20 @@
                     <div class="inputs">
                         <label for="">Producto</label>
                         <input type="text" class="nameProduct">
-                        <label for="">Marca</label>
+                        <label for="">Marca</label> 
                         <input type="text" class="brandProduct">
                         <label for="">Precio por unidad</label>
                         <input type="number" class="priceProduct">
                         <label for="">Promocion</label>
-                        <input type="number " class="promotionProduct">
+                        <input type="number" class="promotionProduct">
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
-                    <fieldset>
-                        <p>Tipos de promociones: 1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
-                    </fieldset>
+                    <div class="promDiv">
+                        <fieldset class="promBox">
+                            <p>Tipos de promociones</p>
+                            <p>1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
+                        </fieldset>
+                    </div>
                 </div><!--fin padre button - boxNod -->
             </fieldset>
         </div>  
