--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
                         <input type="number" class="priceProduct">
                         <label for="">Promocion</label>
                         <input type="number" class="promotionProduct">
+                        <select id="supermarkets">
+                            <option value="">Selecciona un supermercado</option>
+                            <option value="kilbel">Kilbel</option>
+                            <option value="tunel">El Tunel</option>
+                            <option value="makro">Makro</option>
+                            <option value="walmart">Walmart</option>
+                        </select>
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
                     <div class="promDiv">
@@ -78,6 +85,13 @@
                         <input type="number" class="priceProduct">
                         <label for="">Promocion</label>
                         <input type="number" class="promotionProduct">
+                        <select>
+                            <option value="">Selecciona un supermercado</option>
+                            <option value="kilbel">Kilbel</option>
+                            <option value="tunel">El Tunel</option>
+                            <option value="makro">Makro</option>
+                            <option value="walmart">Walmart</option>
+                        </select>
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
                     <div class="promDiv">
@@ -109,6 +123,13 @@
                         <input type="number" class="priceProduct">
                         <label for="">Promocion</label>
                         <input type="number" class="promotionProduct">
+                        <select>
+                            <option value="">Selecciona un supermercado</option>
+                            <option value="kilbel">Kilbel</option>
+                            <option value="tunel">El Tunel</option>
+                            <option value="makro">Makro</option>
+                            <option value="walmart">Walmart</option>
+                        </select>
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
                     <div class="promDiv">
@@ -140,6 +161,13 @@
                         <input type="number" class="priceProduct">
                         <label for="">Promocion</label>
                         <input type="number" class="promotionProduct">
+                        <select>
+                            <option value="">Selecciona un supermercado</option>
+                            <option value="kilbel">Kilbel</option>
+                            <option value="tunel">El Tunel</option>
+                            <option value="makro">Makro</option>
+                            <option value="walmart">Walmart</option>
+                        </select>
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
                     <div class="promDiv">
