--- a/index.html
+++ b/index.html
@@ -45,9 +45,21 @@
                         <input type="text" class="brandProduct">
                         <label for="">Precio por unidad</label>
                         <input type="number" class="priceProduct">
-                        <label for="">Promocion</label>
-                        <input type="number" class="promotionProduct">
-                        <select id="supermarkets">
+
+                        <select class="promotions">
+                            <option value="Sin promocion">Sin Promocion</option>
+                            <option value="2x1">2x1</option>
+                            <option value="3x2">3x2</option>
+                            <option value="50% off en la 2da unidad">50% OFF en 2da unidad</option>
+                            <option value="10% off">10% OFF</option>
+                            <option value="15% off">15% OFF</option>
+                            <option value="20% off">20% OFF</option>
+                            <option value="25% off">25% OFF</option>
+                            <option value="30% off">30% OFF</option>
+                            <option value="35% off">35% OFF</option>
+                            <option value="40% off">40% OFF</option>
+                        </select>
+                        <select class="supermarkets">
                             <option value="">Selecciona un supermercado</option>
                             <option value="kilbel">Kilbel</option>
                             <option value="tunel">El Tunel</option>
@@ -56,12 +68,6 @@
                         </select>
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
-                    <div class="promDiv">
-                        <fieldset class="promBox">
-                            <p>Tipos de promociones</p>
-                            <p>1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
-                        </fieldset>
-                    </div>
                 </div><!--fin padre button - boxNod -->
             </fieldset>
         </div>
@@ -83,9 +89,20 @@
                         <input type="text" class="brandProduct">
                         <label for="">Precio por unidad</label>
                         <input type="number" class="priceProduct">
-                        <label for="">Promocion</label>
-                        <input type="number" class="promotionProduct">
-                        <select>
+                        <select class="promotions">
+                            <option value="Sin promocion">Sin Promocion</option>
+                            <option value="2x1">2x1</option>
+                            <option value="3x2">3x2</option>
+                            <option value="50% off en la 2da unidad">50% OFF en 2da unidad</option>
+                            <option value="10% off">10% OFF</option>
+                            <option value="15% off">15% OFF</option>
+                            <option value="20% off">20% OFF</option>
+                            <option value="25% off">25% OFF</option>
+                            <option value="30% off">30% OFF</option>
+                            <option value="35% off">35% OFF</option>
+                            <option value="40% off">40% OFF</option>
+                        </select>
+                        <select class="supermarkets">
                             <option value="">Selecciona un supermercado</option>
                             <option value="kilbel">Kilbel</option>
                             <option value="tunel">El Tunel</option>
@@ -94,12 +111,6 @@
                         </select>
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
-                    <div class="promDiv">
-                        <fieldset class="promBox">
-                            <p>Tipos de promociones</p>
-                            <p>1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
-                        </fieldset>
-                    </div>
                 </div><!--fin padre button - boxNod -->
             </fieldset>
         </div>
@@ -121,9 +132,20 @@
                         <input type="text" class="brandProduct">
                         <label for="">Precio por unidad</label>
                         <input type="number" class="priceProduct">
-                        <label for="">Promocion</label>
-                        <input type="number" class="promotionProduct">
-                        <select>
+                        <select class="promotions">
+                            <option value="Sin promocion">Sin Promocion</option>
+                            <option value="2x1">2x1</option>
+                            <option value="3x2">3x2</option>
+                            <option value="50% off en la 2da unidad">50% OFF en 2da unidad</option>
+                            <option value="10% off">10% OFF</option>
+                            <option value="15% off">15% OFF</option>
+                            <option value="20% off">20% OFF</option>
+                            <option value="25% off">25% OFF</option>
+                            <option value="30% off">30% OFF</option>
+                            <option value="35% off">35% OFF</option>
+                            <option value="40% off">40% OFF</option>
+                        </select>
+                        <select class="supermarkets">
                             <option value="">Selecciona un supermercado</option>
                             <option value="kilbel">Kilbel</option>
                             <option value="tunel">El Tunel</option>
@@ -132,12 +154,6 @@
                         </select>
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
-                    <div class="promDiv">
-                        <fieldset class="promBox">
-                            <p>Tipos de promociones</p>
-                            <p>1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
-                        </fieldset>
-                    </div>
                 </div><!--fin padre button - boxNod -->
             </fieldset>
         </div>
@@ -159,9 +175,20 @@
                         <input type="text" class="brandProduct">
                         <label for="">Precio por unidad</label>
                         <input type="number" class="priceProduct">
-                        <label for="">Promocion</label>
-                        <input type="number" class="promotionProduct">
-                        <select>
+                        <select class="promotions">
+                            <option value="Sin promocion">Sin Promocion</option>
+                            <option value="2x1">2x1</option>
+                            <option value="3x2">3x2</option>
+                            <option value="50% off en la 2da unidad">50% OFF en 2da unidad</option>
+                            <option value="10% off">10% OFF</option>
+                            <option value="15% off">15% OFF</option>
+                            <option value="20% off">20% OFF</option>
+                            <option value="25% off">25% OFF</option>
+                            <option value="30% off">30% OFF</option>
+                            <option value="35% off">35% OFF</option>
+                            <option value="40% off">40% OFF</option>
+                        </select>
+                        <select class="supermarkets">
                             <option value="">Selecciona un supermercado</option>
                             <option value="kilbel">Kilbel</option>
                             <option value="tunel">El Tunel</option>
@@ -170,12 +197,6 @@
                         </select>
                     </div>
                     <button class="btnNewProd">Agregar producto</button>
-                    <div class="promDiv">
-                        <fieldset class="promBox">
-                            <p>Tipos de promociones</p>
-                            <p>1 = 2x1 , 2 = 3x2 , 3 = 50% OFF en la 2da unidad</p>
-                        </fieldset>
-                    </div>
                 </div><!--fin padre button - boxNod -->
             </fieldset>
         </div>  
